src/App.css
#root,
body,
html {
	margin: 0;
	padding: 0;
	height: 92vh;
	box-sizing: border-box;
	color: #3f3f3f;
}

.App {
	height: 100%;
	background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)),
		url(./images/background.jpg);
	background-size: cover;
	background-position: center;
	display: flex;
	justify-content: center;
	align-items: center;
	text-align: center;
}

.button {
	border-radius: 50px !important;
	padding: 6px 18px !important;
}

.App-card {
	background-color: whitesmoke;
	width: 50%;
	height: 40%;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	border-radius: 20px;
	padding: 1.5%;
	box-shadow: 5px 5px;
}

.App-heading {
	display: flex;
	align-items: center;
	height: 800px;
	font-family: "Ranchers", cursive;
	font-weight: 100;
	word-spacing: 1px;
}

.button:hover {
	animation: rotate 0.7s ease-in-out both;
}

.button:hover span {
	animation: storm 0.7s ease-in-out both;
	animation-delay: 0.06s;
}

@keyframes rotate {
	0% {
		transform: rotate(0deg) translate3d(0, 0, 0);
	}
	25% {
		transform: rotate(3deg) translate3d(0, 0, 0);
	}
	50% {
		transform: rotate(-3deg) translate3d(0, 0, 0);
	}
	75% {
		transform: rotate(1deg) translate3d(0, 0, 0);
	}
	100% {
		transform: rotate(0deg) translate3d(0, 0, 0);
	}
}

@keyframes storm {
	0% {
		transform: translate3d(0, 0, 0) translateZ(0);
	}
	25% {
		transform: translate3d(4px, 0, 0) translateZ(0);
	}
	50% {
		transform: translate3d(-3px, 0, 0) translateZ(0);
	}
	75% {
		transform: translate3d(2px, 0, 0) translateZ(0);
	}
	100% {
		transform: translate3d(0, 0, 0) translateZ(0);
	}
}

@media only screen and (max-width: 800px) {
	.App-card {
		width: 80%;
		height: 40%;
	}
}

